# ai-mcp-sync

./: .gitignore  README.md  ai-agent-management-design.md  prd.md  trd.md  user-journey.md
backend/: Cargo.toml
backend/src/: api.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  sync.rs
docs/: mcp-sync-overview.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: MasterConfigEditor.jsx  RecommendedServerList.jsx  SyncHistory.jsx  ToolList.jsx
frontend/src/services/: api.js
scripts/: build.sh  deploy.sh
tool_configs/claude/: mcp.json
tool_configs/cursor/: mcp.json
